# wedding-inviter

./: .env.example  .gitignore  Makefile  README.md
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude/agents/: api-contract-checker.md  code-reviewer.md
.claude/commands/: create-feature.md  investigate-batch.md  investigate.md  open-pr.md  review-staged.md  tdd-feat.md  trim.md
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: CODEOWNERS
app/backend/: alembic.ini  pyproject.toml  run.py
app/backend/alembic/: env.py
app/backend/alembic/versions/: 20251005_1221_63a40d8ceeaf_initial_schemas_for_ai_conversation_flow.py  20260329_0001_add_weddings_table.py  20260329_1530_ac958052fdc8_initial.py  20260329_2210_a973fbe23ccb_add_guests_table.py
app/backend/src/: __init__.py  main.py  version.py
app/backend/src/api/: auth.py  chat.py  guests.py  wedding.py
app/backend/src/core/: config.py  dependencies.py  lifespan.py  rate_limit.py  security.py
app/backend/src/core/auth/: session.py
app/backend/src/core/cache/: client.py  decorator.py
app/backend/src/core/logging_config/: local.py  middleware.py
app/backend/src/db/: session.py
app/backend/src/db/models/: __init__.py  conversation.py  guest.py  message.py  user.py  wedding.py
app/backend/src/middleware/: user_state.py
app/backend/src/schemas/: __init__.py  auth.py  chat.py  guest.py  user.py  wedding.py
app/backend/src/services/: __init__.py  chat.py  chat_service.py  guest_service.py  invite_service.py
app/backend/src/services/ai/: __init__.py  anthropic_service.py  base.py  openai_service.py
app/backend/tests/: .env.test  conftest.py  test_ai_services.py  test_async_cache.py  test_auth.py  test_auth_integration.py  test_cache_decorator.py  test_chat.py  test_chat_integration.py  test_guests.py  test_health.py  test_rate_limiting.py  test_security.py
infrastructure/: docker-compose.yml
scripts/: apply_variant.py  generate-types.sh
tasks/: mvp-description.md  prd-guest-management.md
(+67 files in other folders)
